--- a/Windows/CLI/App.config
+++ b/Windows/CLI/App.config
@@ -4,9 +4,6 @@
         <add key="rmq_virtual_host" value="SSoTme" />
         <add key="rmq_username" value="smqPublic" />
         <add key="rmq_password" value="smqPublic" />
-        <add key="rmq_endpoint" value="explore.ssot.me" />
+        <add key="rmq_endpoint" value="localhost" />
     </appSettings>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
 </configuration>
